--- a/index.html
+++ b/index.html
@@ -2,18 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Find Food Now</title>
   </head>
   <body>
     <header>
     </header>
-
     <main>
+      <h1>Find Food in Seattle</h1>
+      <form id="choose-food">
+        <fieldset>
+          <legend>Choose Cuisine</legend>
+          <select id="cuisine">
+            <option value="Mexican">Mexican</option>
+            <option value="Italian">Italian</option>
+            <option value="French">French</option>
+            <option value="Indian">Indian</option>
+            <option value="Greek">Greek</option>
+            <option value="Chinese">Chinese</option>
+            <option value="Japanese">Japanese</option>
+            <option value="Russian">Russian</option>
+            <option value="Korean">Korean</option>
+          </select>
+        </fieldset>
+        <fieldset>
+          <legend>Choose Neighborhood</legend>
+          <select id="neighborhood">
+            <option value="Downtown">Downtown</option>
+            <option value="Capitol Hill">Capitol Hill</option>
+            <option value="Queen Anne">Queen Anne</option>
+            <option value="University District">University District</option>
+            <option value="Fremont">Fremont</option>
+            <option value="Wallingford">Wallingford</option>
+            <option value="Ballard">Ballard</option>
+            <option value="South Lake Union">South Lake Union</option>
+            <option value="Belltown">Belltown</option>
+            <option value="International District">International District</option>
+          </select>
+        </fieldset>
+        <button type="submit">Discover Food</button>
+      </form>
     </main>
 
     <footer>
-
     </footer>
-    <script src="app.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
