--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <option value="Japanese">Japanese</option>
             <option value="Russian">Russian</option>
             <option value="Korean">Korean</option>
+            <option value="Cuban">Cuban</option>
           </select>
         </fieldset>
         <fieldset>
